--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <meta property="og:title" content="Page 7">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="https://website1080845.nicepage.io/Page-7.html?version=bb7c4989-c079-4f2f-b83d-4b374d057a1b" data-home-page-title="Page 7" class="u-body"><header class="u-clearfix u-header u-header" id="sec-30a6"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1">
+  <body data-home-page="https://website1080845.nicepage.io/Page-7.html?version=bb7c4989-c079-4f2f-b83d-4b374d057a1b" data-home-page-title="Page 7" class="u-body"><!-- <header class="u-clearfix u-header u-header" id="sec-30a6"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1"> -->
+        <!-- <a href="https://nicepage.com" class="u-image u-logo u-image-1">
           <img src="images/default-logo.png" class="u-logo-image u-logo-image-1">
-        </a>
+        </a> -->
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="XL">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 500;" wfd-invisible="true">
             <a class="u-button-style u-custom-active-color u-custom-border u-custom-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
-              <svg><use xlink:href="#menu-hamburger"></use></svg>
+              <!-- <svg><use xlink:href="#menu-hamburger"></use></svg> -->
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><symbol id="menu-hamburger" viewBox="0 0 16 16" style="width: 16px; height: 16px;"><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
 </symbol>
 </defs></svg>
@@ -59,8 +59,8 @@
     <section class="u-align-center-lg u-align-center-md u-align-center-xl u-align-left-sm u-align-left-xs u-clearfix u-white u-section-1" id="sec-18b5">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-1">Certifications</h1>
-        <p class="u-custom-font u-font-pt-sans u-text u-text-2">“You can do anything you set your mind to.” <br>- Benjamin Franklin
-        </p>
+        <!-- <p class="u-custom-font u-font-pt-sans u-text u-text-2">“You can do anything you set your mind to.” <br>- Benjamin Franklin
+        </p> -->
         <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div>
         <div class="u-expanded-width u-gallery u-layout-grid u-lightbox u-show-text-on-hover u-gallery-1">
           <div class="u-gallery-inner u-gallery-inner-1">
@@ -235,20 +235,29 @@
                 <p class="u-gallery-text"></p>
               </div>
             </div>	
+			<div class="u-effect-fade u-effect-hover-zoom u-gallery-item">
+              <div class="u-back-slide" data-image-width="1000" data-image-height="919">
+                <img class="u-back-image u-expanded" src="certificates/Tableau-1.png">
+              </div>
+              <div class="u-over-slide u-shading u-over-slide-9">
+                <h3 class="u-gallery-heading"></h3>
+                <p class="u-gallery-text"></p>
+              </div>
+            </div>	
 			
           </div>
         </div>
         <p class="u-align-center u-text u-text-body-alt-color u-text-3">Images from <a href="https://www.freepik.com/psd/cards" class="u-border-1 u-border-white u-btn u-button-link u-button-style u-none u-text-body-alt-color u-btn-1" target="_blank">Freepik</a>
         </p>
-        <a href="https://nicepage.com/k/card-html-templates" class="u-active-black u-align-center u-border-1 u-border-active-black u-border-black u-border-hover-black u-btn u-button-style u-hover-black u-none u-text-active-white u-text-black u-text-hover-white u-btn-2">view more</a>
+        <!-- <a href="https://nicepage.com/k/card-html-templates" class="u-active-black u-align-center u-border-1 u-border-active-black u-border-black u-border-hover-black u-btn u-button-style u-hover-black u-none u-text-active-white u-text-black u-text-hover-white u-btn-2">view more</a> -->
       </div>
     </section>
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-fb57"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+        <!-- <p class="u-small-text u-text u-text-variant u-text-1">Sample text. Click to select the text box. Click again or double click to start editing the text.</p> -->
       </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
+<!--     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="html5-template" target="_blank">
         <span>HTML5 Template</span>
       </a>
@@ -258,6 +267,6 @@
       <a class="u-link" href="html-website-builder" target="_blank">
         <span>HTML Creator</span>
       </a>. 
-    </section>
+    </section> -->
   </body>
 </html>
