--- a/index.html
+++ b/index.html
@@ -58,6 +58,42 @@
       </div></header> 
     <section class="u-align-center-lg u-align-center-md u-align-center-xl u-align-left-sm u-align-left-xs u-clearfix u-white u-section-1" id="sec-18b5">
       <div class="u-clearfix u-sheet u-sheet-1">
+		<h1 class="u-text u-text-1">Honours</h1>
+		<div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div>
+        <div class="u-expanded-width u-gallery u-layout-grid u-lightbox u-show-text-on-hover u-gallery-1">
+          <div class="u-gallery-inner u-gallery-inner-1">
+            <div class="u-effect-fade u-effect-hover-zoom u-gallery-item">
+              <div class="u-back-slide" data-image-width="100" data-image-height="200">
+                <img class="u-back-image u-expanded" src="certificates/UTS.png" >
+              </div>
+              <div class="u-over-slide u-shading u-over-slide-1">
+                <h3 class="u-gallery-heading"></h3>
+                <p class="u-gallery-text"></p>
+              </div>
+            </div>
+            <div class="u-effect-fade u-effect-hover-zoom u-gallery-item">
+              <div class="u-back-slide" data-image-width="100" data-image-height="200">
+                <img class="u-back-image u-expanded" src="certificates/FBM1.png" >
+              </div>
+              <div class="u-over-slide u-shading u-over-slide-2">
+                <h3 class="u-gallery-heading"></h3>
+                <p class="u-gallery-text"></p>
+              </div>
+            </div>
+            <div class="u-effect-fade u-effect-hover-zoom u-gallery-item">
+              <div class="u-back-slide" data-image-width="100" data-image-height="200" >
+                <img class="u-back-image u-expanded" src="certificates/FBM2.png">
+              </div>
+              <div class="u-over-slide u-shading u-over-slide-3">
+                <h3 class="u-gallery-heading"></h3>
+                <p class="u-gallery-text"></p>
+              </div>
+            </div>		
+          </div>
+        </div>
+		
+	  
+	  
         <h1 class="u-text u-text-1">Certifications</h1>
         <!-- <p class="u-custom-font u-font-pt-sans u-text u-text-2">“You can do anything you set your mind to.” <br>- Benjamin Franklin
         </p> -->
